# rust-vercel-demo

./: Cargo.toml  README.md
.github/workflows/: main.yml
api/: hello.rs
