[package]
name = "rust-vercel-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
vercel_runtime = "1.1.0"


[[bin]]
name = "simple"
path = "api/hello.rs"
